--- a/reports/index.html
+++ b/reports/index.html
@@ -3,10 +3,10 @@
 <head>
    <!-- HTML meta refresh URL redirection -->
    <meta http-equiv="refresh"
-   content="0; url=http://binarybottle.com/mhealthx/reports/spokes.html">
+   content="0; url=http://binarybottle.github.io/mhealthx/reports/spokes.html">
 </head>
 <body>
    <p>The page has moved to:
-   <a href="http://binarybottle.com/mhealthx/reports/spokes.html">this page</a></p>
+   <a href="http://binarybottle.github.io/mhealthx/reports/spokes.html">this page</a></p>
 </body>
 </html>
