--- a/reports/lines.html
+++ b/reports/lines.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title>mPower performance report</title>
-    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <link rel="stylesheet" type="text/css" href="./css/lines.css" />
   </head>
