--- a/reports/spokes.html
+++ b/reports/spokes.html
@@ -5,10 +5,10 @@
 <html>
   <head>
     <title>mPower performance report</title>
-    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <link rel="stylesheet" type="text/css" href="./css/spokes.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css' />
     <script type="text/javascript" src="./js/modernizr.custom.79639.js"></script> 
   </head>
   <body>  <!-- onLoad="setToday()"-->
