--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
   <tr>
    <td>
 
- <!--a href="#">
-  <img src="" alt="small logo"  border="0" width="160"/-->
- </a-->
+ <a href="#">
+  <img alt="Child Mind Institute logo" src="https://mfr.osf.io/export?url=https://osf.io/3z8am/?action=download%26direct%26mode=render&initialWidth=673&childId=mfrIframe&format=1200x1200.jpeg" style="width: 160px; border: "0" />   
+ </a>
 
    </td>
   <tr>
-   <td>
-  <img alt="Child Mind Institute logo" src="https://mfr.osf.io/export?url=https://osf.io/3z8am/?action=download%26direct%26mode=render&initialWidth=673&childId=mfrIframe&format=1200x1200.jpeg" style="width: 120px; border: "0" />   
-   </td>
    <td>
  <a style="padding: 0px 0px 0px 0px; color: #00AA00; text-decoration: none; font-size: 32px"
   href="#">mhealthx</a>
