Redirect gh-pages index.html to readthedocs documentation.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
    <!-- HTML meta refresh URL redirection -->
    <meta http-equiv="refresh"
-   content="0; url=http://binarybottle.github.io/mhealthx">
+   content="0; url=http://mhealthx.readthedocs.io/en/latest/">
 </head>
 <body>
    <p>The page is redirecting to:
-   <a href="http://binarybottle.github.io/mhealthx">this page</a></p>
+   <a href="http://mhealthx.readthedocs.io/en/latest/">http://mhealthx.readthedocs.io/en/latest/</a></p>
 </body>
 </html>
